Refactor ModelAdaptersScanner: extract interface and simplify fake implementation